Handler close windows

--- a/Sims-GYM/Plant_Growth_Project.ipynb
+++ b/Sims-GYM/Plant_Growth_Project.ipynb
@@ -1,12 +1,7 @@
 {
  "cells": [
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:36.280055Z",
-     "start_time": "2025-01-09T14:14:34.289892Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import gym\n",
@@ -25,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:36.310057Z",
-     "start_time": "2025-01-09T14:14:36.292058Z"
+     "end_time": "2025-01-09T14:47:52.577883Z",
+     "start_time": "2025-01-09T14:47:52.563982Z"
     }
    },
    "cell_type": "code",
@@ -38,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:36.484175Z",
-     "start_time": "2025-01-09T14:14:36.441145Z"
+     "end_time": "2025-01-09T14:47:52.765495Z",
+     "start_time": "2025-01-09T14:47:52.725487Z"
     }
    },
    "cell_type": "code",
@@ -162,6 +157,13 @@
     "                pygame.display.set_caption('Plant growth')\n",
     "                icon = self.growth[5]\n",
     "                pygame.display.set_icon(icon)\n",
+    "            \n",
+    "            #Handler manager\n",
+    "            for event in pygame.event.get():\n",
+    "             if event.type == pygame.QUIT:\n",
+    "                self.close()  \n",
+    "                return\n",
+    "            \n",
     "            if self.background:\n",
     "                self.window.blit(self.background, (0, 0))\n",
     "            else:\n",
@@ -209,8 +211,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:36.515149Z",
-     "start_time": "2025-01-09T14:14:36.504144Z"
+     "end_time": "2025-01-09T14:47:52.796018Z",
+     "start_time": "2025-01-09T14:47:52.785017Z"
     }
    },
    "cell_type": "code",
@@ -222,8 +224,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:36.562569Z",
-     "start_time": "2025-01-09T14:14:36.535158Z"
+     "end_time": "2025-01-09T14:47:52.828016Z",
+     "start_time": "2025-01-09T14:47:52.816017Z"
     }
    },
    "cell_type": "code",
@@ -235,26 +237,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:36.641030Z",
-     "start_time": "2025-01-09T14:14:36.599500Z"
+     "end_time": "2025-01-09T14:47:52.875442Z",
+     "start_time": "2025-01-09T14:47:52.864024Z"
     }
    },
    "cell_type": "code",
-   "source": "policy=init_policy(pars)",
+   "source": "#policy=init_policy(pars)",
    "id": "add3005361dd230a",
    "outputs": [],
    "execution_count": 6
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:52.229925Z",
-     "start_time": "2025-01-09T14:14:36.679031Z"
+     "start_time": "2025-01-09T14:47:52.910444Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "env = PlantGrowthEnv(pars=pars, render_mode='None')\n",
+    "env = PlantGrowthEnv(pars=pars, render_mode='Human')\n",
     "for _ in tqdm(range(pars['N_episodes'])):  \n",
     "    seq_state,seq_action,seq_reward=make_episode(env,policy,pars)\n",
     "env.close()"
@@ -269,19 +273,19 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "71aff6c1e24345bdb2ba5ffcb000fe32"
+       "model_id": "f579257eda334bbea5696f0e82a2e5db"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:52.292419Z",
+     "end_time": "2025-01-09T14:47:24.615843Z",
      "start_time": "2025-01-09T14:14:52.265449Z"
     }
    },
@@ -321,7 +325,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:58.172650Z",
+     "end_time": "2025-01-09T14:47:24.616844900Z",
      "start_time": "2025-01-09T14:14:52.328419Z"
     }
    },
@@ -352,7 +356,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:59.797733Z",
+     "end_time": "2025-01-09T14:47:24.616844900Z",
      "start_time": "2025-01-09T14:14:58.239696Z"
     }
    },
@@ -407,7 +411,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T14:14:59.890259Z",
+     "end_time": "2025-01-09T14:47:24.617843100Z",
      "start_time": "2025-01-09T14:14:59.879259Z"
     }
    },
